--- a/Project2/UserControls/HistoryForm.resx
+++ b/Project2/UserControls/HistoryForm.resx
@@ -129,7 +129,7 @@
         oo0tuhLhGpyBTpzs+JrA746vP6Yk+QDGXqpmwmzKdAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnFilter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAI1JREFUOE/t
         klsKgCAURN1Ej20puKy2Vx/RWmxGR4x+ivtV0YGBGLsHfLj3k1IakQ1ZkUG1HUgCUgmq7UASiysTVduh
